# vltl

./: Cargo.toml  LICENSE  README.md  e2e_test.fish  init.fish
.github/scripts/: bump-version.mjs  update-homebrew.mjs
.github/workflows/: build.yml  e2e.yml  release.yml
src/: converter.rs  fish_parser.rs  ime.rs  main.rs
